--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,24 @@
 /*Schrijf hier jouw css voor jouw formulier*/
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+
+}
+form{
+    margin:50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: space-between;
+
+}
+
+div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
